--- a/.github/workflows/weenkly_deployment.yml
+++ b/.github/workflows/weenkly_deployment.yml
@@ -32,12 +32,14 @@ jobs:
         uses: actions/checkout@v2
       - name: Check if file exists
         run: |
-          if [ -f pages/ ]; then
+          echo cd $GITHUB_WORKSPACE
+          echo ls -la
+          if [ -f ./pages/ ]; then
             echo "File exists"
-            echo "::set-output name=file-exists::true"
+            echo "file-exists=true" >> $GITHUB_OUTPUT
           else
             echo "File does not exist"
-            echo "::set-output name=file-exists::false"
+            echo "file-exists=false" >> $GITHUB_OUTPUT
           fi
   deploy:
     needs: check-file-exists
