--- a/targets/bnlearn/config.ini
+++ b/targets/bnlearn/config.ini
@@ -1,3 +1,4 @@
 [bnlearn]
 language = python
 before_build = pip install --upgrade bnlearn
+description = BnLean is a Python package for learning the graphical structure of Bayesian networks, parameter learning, inference and sampling methods.
