--- a/themes/BIF_manipulation/BIFReading/config.ini
+++ b/themes/BIF_manipulation/BIFReading/config.ini
@@ -1,5 +1,5 @@
 [BIFReading]
-nb_runs = 20
+; nb_runs = 30
 arguments = pigs.bif,water.bif,pathfinder.bif,munin.bif,mildew.bif,link.bif,insurance.bif,hepar2.bif,hailfinder.bif,earthquake.bif,diabetes.bif,child.bif,cancer.bif,barley.bif,asia.bif,andes.bif,alarm.bif
 keyword = bif,Bayesian network
 timeout = 60
