--- a/themes/Learning/Learning_hill_climb_BIC/config.ini
+++ b/themes/Learning/Learning_hill_climb_BIC/config.ini
@@ -1,9 +1,10 @@
-[LearningHillClimb]
-nb_runs = 20
-arguments = 100,250,500,750,1000,1500,2000,2500,3000,3500,4000,4500,5000,7500,10000
+[Learning_hill_climb_BIC]
+; nb_runs = 20
+arguments = 1000,1500,2000,2500,3000,3500,4000,4500,5000,7500,10000
 keyword = bif,Bayesian network, Learning structure, Learning parameters
 before_task = python before_task.py
-before_task_arguments = alarm.bif 100,250,500,750,1000,1500,2000,2500,3000,3500,4000,4500,5000,7500,10000
+before_task_arguments = alarm.bif 1000,1500,2000,2500,3000,3500,4000,4500,5000,7500,10000
+file_used = alarm.bif
 evaluation_language = python
 evaluation_script = evaluationFScore.py
 timeout = 60
