--- a/themes/Learning/Learning_exaustive_search_BIC/config.ini
+++ b/themes/Learning/Learning_exaustive_search_BIC/config.ini
@@ -2,11 +2,13 @@
 ; nb_runs = 20
 arguments = 1000,1500,2000,2500,3000,3500,4000,4500,5000,7500,10000
 keyword = bif,Bayesian network, Learning structure, Learning parameters
-before_task = python before_task.py
-before_task_arguments = alarm.bif 1000,1500,2000,2500,3000,3500,4000,4500,5000,7500,10000
+before_script = before_task
+before_function = createSamples
+before_task_arguments = {'sample_size' : [1000,1500,2000,2500,3000,3500,4000,4500,5000,7500,10000], 'bifFile' : 'alarm.bif' }
 file_used = alarm.bif
 evaluation_language = python
-evaluation_script = evaluationFScore.py
+evaluation_script = evaluation
+evaluation_function = evaluateFscore 
 timeout = 60
 description = Learning a Bayesian network refers to the process of automatically constructing a Bayesian network model from data, without specifying the network structure or conditional probability distributions beforehand. The goal of learning a Bayesian network is to identify the causal relationships among a set of variables and to estimate the conditional probabilities that describe these relationships.
 arguments_description = Number of samples
