--- a/themes/Learning/Learning_best_method/config.ini
+++ b/themes/Learning/Learning_best_method/config.ini
@@ -10,7 +10,26 @@ evaluation_language = python
 evaluation_script = evaluation
 evaluation_function = evaluateFscore 
 timeout = 60
-description = Learning a Bayesian network refers to the process of automatically constructing a Bayesian network model from data, without specifying the network structure or conditional probability distributions beforehand. The goal of learning a Bayesian network is to identify the causal relationships among a set of variables and to estimate the conditional probabilities that describe these relationships.
 arguments_description = Number of samples
-display_scale = linear
+
 extra_html_element = alarm.html
+description = Learning a Bayesian network refers to the process of automatically constructing 
+    a Bayesian network model from data, without specifying the network structure or conditional 
+    probability distributions beforehand. The goal of this task is to compare the performance of
+    the best algorithms for learning the structure of a Bayesian network from data for each target.
+
+extra_description = All our targets have to learn the structure of the Bayesian network
+    alarm.bif from data. The learning process is done with the best algorithm for each target.
+    We then compare the performance of each algorithm by computing the Fscore of the learned
+
+task_scale = auto
+post_task_scale = auto
+
+task_xlabel = Number of samples
+task_ylabel = Time (s)
+task_title = Learning time of the best algorithm for each target
+task_display = line
+post_task_xlabel = Number of samples
+post_task_ylabel = Fscore
+post_task_title = Fscore of the best algorithm for each target
+post_task_display = groupedBar
