--- a/themes/Learning/Learning_exhaustive_search_BIC/config.ini
+++ b/themes/Learning/Learning_exhaustive_search_BIC/config.ini
@@ -1,4 +1,4 @@
-[Learning_exaustive_search_BIC]
+[Learning_exhaustive_search_BIC]
 ; nb_runs = 20
 arguments = 1000,1500,2000,2500,3000,3500,4000,4500,5000,7500,10000
 keyword = bif,Bayesian network, Learning structure, Learning parameters
@@ -12,4 +12,15 @@ evaluation_function = evaluateFscore
 timeout = 60
 description = Learning a Bayesian network refers to the process of automatically constructing a Bayesian network model from data, without specifying the network structure or conditional probability distributions beforehand. The goal of learning a Bayesian network is to identify the causal relationships among a set of variables and to estimate the conditional probabilities that describe these relationships.
 arguments_description = Number of samples
-display_scale = linear
+
+task_scale = auto
+post_task_scale = auto
+
+task_xlabel = Number of samples
+task_ylabel = Time (s)
+task_title = Learning time of the best algorithm for each target
+task_display = line
+post_task_xlabel = Number of samples
+post_task_ylabel = Fscore
+post_task_title = Fscore of the best algorithm for each target
+post_task_display = groupedBar
