--- a/themes/Learning/Learning_best_method/config.ini
+++ b/themes/Learning/Learning_best_method/config.ini
@@ -8,7 +8,7 @@ before_task_arguments = {'sample_size' : [1000,1500,2000,2500,3000,3500,4000,450
 file_used = alarm.bif
 evaluation_language = python
 evaluation_script = evaluation
-evaluation_function = evaluateFscore 
+evaluation_function = evaluateFscore evaluatePrecision evaluateRecall
 timeout = 60
 arguments_description = Number of samples
 
