--- a/themes/Learning/Learning_best_method/config.ini
+++ b/themes/Learning/Learning_best_method/config.ini
@@ -30,6 +30,6 @@ task_ylabel = Time (s)
 task_title = Learning time of the best algorithm for each target
 task_display = line
 post_task_xlabel = Number of samples
-post_task_ylabel = Fscore
+post_task_ylabel = Fscore Precision Recall
 post_task_title = Fscore of the best algorithm for each target
 post_task_display = groupedBar
