cleaning code with black

--- a/themes/BIF_manipulation/BIFReading/config.ini
+++ b/themes/BIF_manipulation/BIFReading/config.ini
@@ -7,9 +7,9 @@ description = The Bayesian Interchange Format (BIF) is a file format used for st
 arguments_description = Bayesian network
 
 
-task_scale = auto
+task_scale = linear
 
 task_xlabel = Name of the network
 task_ylabel = Time (s)
-task_title = Reading time
+task_title = Reading time of file in BIF format
 task_display = groupedBar
