--- a/themes/Learning/Learning_best_method/config.ini
+++ b/themes/Learning/Learning_best_method/config.ini
@@ -23,7 +23,7 @@ extra_description = All our targets have to learn the structure of the Bayesian 
     We then compare the performance of each algorithm by computing the Fscore of the learned
 
 task_scale = auto
-post_task_scale = auto
+post_task_scale = linear
 
 task_xlabel = Number of samples
 task_ylabel = Time (s)
@@ -32,4 +32,4 @@ task_display = line
 post_task_xlabel = Number of samples
 post_task_ylabel = Fscore Precision Recall
 post_task_title = Fscore of the best algorithm for each target
-post_task_display = groupedBar
+post_task_display = line
