changing some tests

--- a/themes/BIF_manipulation/BIFReading/config.ini
+++ b/themes/BIF_manipulation/BIFReading/config.ini
@@ -3,10 +3,29 @@
 arguments = pigs.bif,water.bif,pathfinder.bif,munin.bif,mildew.bif,link.bif,insurance.bif,hepar2.bif,hailfinder.bif,earthquake.bif,diabetes.bif,child.bif,cancer.bif,barley.bif,asia.bif,andes.bif,alarm.bif
 keyword = bif,Bayesian network
 timeout = 60
-description = The Bayesian Interchange Format (BIF) is a file format used for storing Bayesian network models, which are probabilistic graphical models used for representing uncertain knowledge and reasoning about probabilistic relationships among variables. The BIF format consists of a plain text file that contains a specification of the Bayesian network model. The file is structured as a series of sections, each of which begins with a keyword that indicates the type of data in the section. The sections include a network definition section, variable definition sections, probability definition sections, and comment sections. The network definition section specifies the name of the network and any additional information about the network structure, such as its type and whether it is acyclic or cyclic. The variable definition sections define the variables used in the Bayesian network model. Each variable definition includes the variable's name, a list of its possible values, and any additional information about the variable, such as its type or domain. The probability definition sections define the conditional probability tables (CPTs) for each variable in the network. The CPTs specify the probability distribution for each variable given the values of its parent variables in the network. The comment sections are used to include additional information about the model or to provide context for the other sections. To read a BIF file, you typically start by parsing the file into its component sections and then processing each section in turn. The exact details of how to read a BIF file will depend on the programming language and file I/O library you are using. It's worth noting that the BIF format is widely used in the field of Bayesian networks and probabilistic modeling, and is supported by many software packages and libraries.
+description = The Bayesian Interchange Format (BIF) is a file format used for storing Bayesian network models, 
+    which are probabilistic graphical models used for representing uncertain knowledge and reasoning 
+    about probabilistic relationships among variables. 
+    
+extra_description = The BIF format consists of a plain text file that 
+    contains a specification of the Bayesian network model. The file is structured as a series of sections
+    , each of which begins with a keyword that indicates the type of data in the section. 
+    The sections include a network definition section, variable definition sections, probability 
+    definition sections, and comment sections. The network definition section specifies the name 
+    of the network and any additional information about the network structure, such as its type and whether 
+    it is acyclic or cyclic. The variable definition sections define the variables used in the Bayesian 
+    network model. Each variable definition includes the variable's name, a list of its possible values, and 
+    any additional information about the variable, such as its type or domain. The probability definition 
+    sections define the conditional probability tables (CPTs) for each variable in the network. 
+    The CPTs specify the probability distribution for each variable given the values of its parent variables 
+    in the network. The comment sections are used to include additional information about the model 
+    or to provide context for the other sections. To read a BIF file, you typically start by 
+    parsing the file into its component sections and then processing each section in turn. 
+    The exact details of how to read a BIF file will depend on the programming language and file I/O 
+    library you are using. It's worth noting that the BIF format is widely used in the field of 
+    Bayesian networks and probabilistic modeling, and is supported by many software packages and libraries.
+
 arguments_description = Bayesian network
-
-
 task_scale = linear
 
 task_xlabel = Name of the network
