--- a/themes/Learning/Learning_best_method/config.ini
+++ b/themes/Learning/Learning_best_method/config.ini
@@ -31,5 +31,5 @@ task_title = Learning time of the best algorithm for each target
 task_display = line
 post_task_xlabel = Number of samples
 post_task_ylabel = Fscore Precision Recall
-post_task_title = Fscore of the best algorithm for each target
+post_task_title = Fscore of the best algorithm for each target, Precision of the best algorithm for each target, Recall of the best algorithm for each target
 post_task_display = line
