--- a/themes/Learning/Learning_hill_climb_BIC/config.ini
+++ b/themes/Learning/Learning_hill_climb_BIC/config.ini
@@ -8,19 +8,23 @@ before_task_arguments = {'sample_size' : [1000,1500,2000,2500,3000,3500,4000,450
 file_used = alarm.bif
 evaluation_language = python
 evaluation_script = evaluation
-evaluation_function = evaluateFscore 
+evaluation_function = evaluateFscore evaluatePrecision evaluateRecall
 timeout = 60
-description = Learning a Bayesian network refers to the process of automatically constructing a Bayesian network model from data, without specifying the network structure or conditional probability distributions beforehand. The goal of learning a Bayesian network is to identify the causal relationships among a set of variables and to estimate the conditional probabilities that describe these relationships.
+description = Learning a Bayesian network refers to the process of automatically constructing 
+    a Bayesian network model from data, without specifying the network structure or conditional 
+    probability distributions beforehand. The goal of this task is to compare the performance of
+    the hill climb algorithm used with the BIC score for learning the structure of a Bayesian network from data for each target.
+
 arguments_description = Number of samples
 
 task_scale = auto
-post_task_scale = auto
+post_task_scale = linear
 
 task_xlabel = Number of samples
 task_ylabel = Time (s)
 task_title = Learning time of the best algorithm for each target
 task_display = line
 post_task_xlabel = Number of samples
-post_task_ylabel = Fscore
-post_task_title = Fscore of the best algorithm for each target
-post_task_display = groupedBar
+post_task_ylabel = Fscore Precision Recall
+post_task_title = Fscore with Hill climb algorithm for each target, Precision with Hill climb algorithm for each target, Recall with Hill climb algorithm for each target
+post_task_display = line
