--- a/themes/BIF_manipulation/BIFReading/config.ini
+++ b/themes/BIF_manipulation/BIFReading/config.ini
@@ -26,9 +26,9 @@ extra_description = The BIF format consists of a plain text file that
     Bayesian networks and probabilistic modeling, and is supported by many software packages and libraries.
 
 arguments_description = Bayesian network
-task_scale = linear
+task_scale = auto
 
 task_xlabel = Name of the network
 task_ylabel = Time (s)
 task_title = Reading time of file in BIF format
-task_display = groupedBar
+task_display = line
