--- a/themes/BIF_manipulation/BIFReading/config.ini
+++ b/themes/BIF_manipulation/BIFReading/config.ini
@@ -31,4 +31,4 @@ task_scale = auto
 task_xlabel = Name of the network
 task_ylabel = Time (s)
 task_title = Reading time of file in BIF format
-task_display = line
+task_display = groupedBar
