--- a/themes/Inference/Approx_Inference/config.ini
+++ b/themes/Inference/Approx_Inference/config.ini
@@ -26,4 +26,4 @@ post_task_scale = auto
 task_xlabel = Files Infered On
 task_ylabel = Time (s)
 task_title = Inference time by Variable Elimination
-task_display = line
+task_display = groupedBar
