--- a/themes/Inference/Approx_Inference/config.ini
+++ b/themes/Inference/Approx_Inference/config.ini
@@ -1,6 +1,6 @@
 [Approx_Inference]
 ; nb_runs = 30
-arguments = pigs.bif,water.bif,pathfinder.bif,munin.bif,mildew.bif,link.bif,insurance.bif,hepar2.bif,hailfinder.bif,earthquake.bif,diabetes.bif,child.bif,cancer.bif,barley.bif,asia.bif,andes.bif,alarm.bif
+arguments = pigs.bif,water.bif,munin.bif,mildew.bif,link.bif,insurance.bif,hepar2.bif,hailfinder.bif,earthquake.bif,diabetes.bif,child.bif,cancer.bif,barley.bif,asia.bif,andes.bif,alarm.bif
 keyword = bif,Bayesian network, Learning structure, Learning parameters
 
 timeout = 60
