--- a/themes/BIF_manipulation/BIFReading/config.ini
+++ b/themes/BIF_manipulation/BIFReading/config.ini
@@ -1,6 +1,6 @@
 [BIFReading]
 ; nb_runs = 30
-arguments = pigs.bif,water.bif,pathfinder.bif,munin.bif,mildew.bif,link.bif,insurance.bif,hepar2.bif,hailfinder.bif,earthquake.bif,diabetes.bif,child.bif,cancer.bif,barley.bif,asia.bif,andes.bif,alarm.bif
+arguments = pigs.bif,water.bif,munin.bif,mildew.bif,link.bif,insurance.bif,hepar2.bif,hailfinder.bif,earthquake.bif,diabetes.bif,child.bif,cancer.bif,barley.bif,asia.bif,andes.bif,alarm.bif
 keyword = bif,Bayesian network
 timeout = 60
 description = The Bayesian Interchange Format (BIF) is a file format used for storing Bayesian network models, 
