micro chnage to description

--- a/themes/Learning/Learning_best_method/config.ini
+++ b/themes/Learning/Learning_best_method/config.ini
@@ -17,6 +17,9 @@ description = Learning a Bayesian network refers to the process of automatically
     a Bayesian network model from data, without specifying the network structure or conditional 
     probability distributions beforehand. The goal of this task is to compare the performance of
     the best algorithms for learning the structure of a Bayesian network from data for each target.
+    <b>A word of caution</b>: For some targets, the learned structure is incomplete for low number of samples.
+    To still be able to compare the performance of the algorithms, we manually add the missing nodes and only
+    the missing nodes to the learned structure ( the CPDs and the arcs are not modified ).
 
 extra_description = All our targets have to learn the structure of the Bayesian network
     alarm.bif from data. The learning process is done with the best algorithm for each target.
