--- a/themes/Learning/Learning_hill_climb_BIC/config.ini
+++ b/themes/Learning/Learning_hill_climb_BIC/config.ini
@@ -13,8 +13,11 @@ timeout = 180
 description = Learning a Bayesian network refers to the process of automatically constructing 
     a Bayesian network model from data, without specifying the network structure or conditional 
     probability distributions beforehand. The goal of this task is to compare the performance of
-    the hill climb algorithm used with the BIC score for learning the structure of a Bayesian network from data for each target.
-
+    the hill climb algorithm used with the BIC score for learning the structure 
+    of a Bayesian network from data for each target.
+    A word of caution: For some targets, the learned structure is incomplete for low number of samples.
+    To still be able to compare the performance of the algorithms, we manually add the missing nodes and only
+    the missing nodes to the learned structure ( the CPDs and the arcs are not modified ).
 arguments_description = Number of samples
 
 task_scale = auto
