--- a/themes/Learning/Learning_micro_child_Kullback_Leibler/config.ini
+++ b/themes/Learning/Learning_micro_child_Kullback_Leibler/config.ini
@@ -8,7 +8,7 @@ before_task_arguments = {'sample_size' : [1000,1500,2000,2500,3000,3500,4000,450
 file_used = micro_child.bif
 evaluation_language = python
 evaluation_script = evaluation
-evaluation_function = evaluateFscore evaluatePrecision evaluateRecall evaluateKullback_Leibler
+evaluation_function = evaluateFscore evaluatePrecision evaluateRecall evaluateKullback_Leibler evaluatePQerror
 timeout = 180
 arguments_description = Number of samples
 
@@ -34,6 +34,6 @@ task_ylabel = Time (s)
 task_title = Learning time of the best algorithm for each target
 task_display = line
 post_task_xlabel = Number of samples
-post_task_ylabel = Fscore Precision Recall Kullback_Leibler
-post_task_title = Fscore of the best algorithm for each target, Precision of the best algorithm for each target, Recall of the best algorithm for each target, Kullback_Leibler of the best algorithm for each target
+post_task_ylabel = Fscore Precision Recall Kullback_Leibler PQerror
+post_task_title = Fscore of the best algorithm for each target, Precision of the best algorithm for each target, Recall of the best algorithm for each target, Kullback_Leibler of the best algorithm for each target, PQerror of the best algorithm for each target
 post_task_display = line
