adding more test

--- a/themes/Learning/Learning_micro_child_Kullback_Leibler/config.ini
+++ b/themes/Learning/Learning_micro_child_Kullback_Leibler/config.ini
@@ -37,3 +37,5 @@ post_task_xlabel = Number of samples
 post_task_ylabel = Fscore Precision Recall Kullback_Leibler PQerror
 post_task_title = Fscore of the best algorithm for each target, Precision of the best algorithm for each target, Recall of the best algorithm for each target, Kullback_Leibler of the best algorithm for each target, PQerror of the best algorithm for each target
 post_task_display = line
+
+active = False
