--- a/themes/Inference/Exact_Inference_mono_target/config.ini
+++ b/themes/Inference/Exact_Inference_mono_target/config.ini
@@ -27,3 +27,5 @@ task_xlabel = Files Infered On
 task_ylabel = Time (s)
 task_title = Inference time by Variable Elimination
 task_display = groupedBar
+
+active = False
