changing order of files

--- a/themes/Inference/Exact_Inference_multi_target/config.ini
+++ b/themes/Inference/Exact_Inference_multi_target/config.ini
@@ -1,6 +1,6 @@
 [Exact_Inference_multi_target]
 ; nb_runs = 30
-arguments = pigs.bif,water.bif,munin.bif,mildew.bif,link.bif,insurance.bif,hepar2.bif,hailfinder.bif,earthquake.bif,diabetes.bif,child.bif,cancer.bif,barley.bif,asia.bif,andes.bif,alarm.bif
+arguments = cancer.bif,earthquake.bif,asia.bif,child.bif,insurance.bif,water.bif,mildew.bif,alarm.bif,barley.bif,hailfinder.bif,hepar2.bif,andes.bif,diabetes.bif,pigs.bif,link.bif,munin.bif
 keyword = bif,Bayesian network, Learning structure, Learning parameters
 
 timeout = 180
