--- a/themes/Input_Output/O3PRM/config.ini
+++ b/themes/Input_Output/O3PRM/config.ini
@@ -14,4 +14,4 @@ task_ylabel = Time (s)
 task_title = Reading time of file in O3PRM format
 task_display = groupedBar
 
-active = False
+active = True
