--- a/themes/Input_Output/XDSL/config.ini
+++ b/themes/Input_Output/XDSL/config.ini
@@ -15,4 +15,4 @@ task_ylabel = Time (s)
 task_title = Reading time of file in XDSL format
 task_display = groupedBar
 
-active = False
+active = True
