--- a/themes/Learning/Learning_structure_small_sampling/config.ini
+++ b/themes/Learning/Learning_structure_small_sampling/config.ini
@@ -38,4 +38,4 @@ post_task_ylabel = Fscore Precision Recall
 post_task_title = Fscore of the best algorithm for each target, Precision of the best algorithm for each target, Recall of the best algorithm for each target
 post_task_display = line
 
-active = False
+active = True
