updating the descriptions of each config file

--- a/targets/bnlearn/config.ini
+++ b/targets/bnlearn/config.ini
@@ -1,4 +1,8 @@
 [bnlearn]
 language = python
 before_build = pip install --upgrade bnlearn
-description = bnlearn is a Python library for learning the structure and parameters of Bayesian networks from data. It offers various algorithms for structure learning, including constraint-based algorithms like PC, IC, and MMHC, and score-based algorithms like K2, BIC, and AIC. bnlearn also supports parameter learning using maximum likelihood estimation, Bayesian parameter estimation, and expectation maximization. The library is easy to use and comes with many built-in functions for data preprocessing, visualization, and model evaluation. It can work with data in various formats, including Pandas dataframes, numpy arrays, and CSV files. bnlearn also supports a wide range of Bayesian network formats, including those used by popular software like GeNIe, Hugin, and Netica. Overall, bnlearn is a powerful tool for Bayesian network analysis that can help researchers and practitioners in various fields, such as machine learning, data science, and decision making, to build accurate and reliable models from data.
+description = <b>bnlearn</b> is for learning the graphical structure of Bayesian networks in Python! What benefits does bnlearn offer over other bayesian analysis implementations?
+    <br>Build on top of the pgmpy library
+    <br>Contains the most-wanted bayesian pipelines
+    <br>Simple and intuitive
+    <br>Focus on structure learning, parameter learning and inference.
