--- a/themes/Learning/Learning_micro_child_Kullback_Leibler/config.ini
+++ b/themes/Learning/Learning_micro_child_Kullback_Leibler/config.ini
@@ -13,17 +13,17 @@ timeout = 180
 arguments_description = Number of samples
 
 extra_html_element = micro_child.html
-description = Learning a Bayesian network refers to the process of automatically constructing 
-    a Bayesian network model from data, without specifying the network structure or conditional 
-    probability distributions beforehand. The goal of this task is to compare the performance of
-    the best algorithms for learning the structure of a Bayesian network from data for each target.
-    <b>A word of caution</b>: For some targets, the learned structure is incomplete for low number of samples.
-    To still be able to compare the performance of the algorithms, we manually add the missing nodes and only
-    the missing nodes to the learned structure ( the CPDs and the arcs are not modified ).
+description = The Kullback-Leibler (KL) divergence, also known as relative entropy, is a measure used to compare two probability distributions. It tells us how different one distribution is from another, in terms of information content.
+    <br>In the Bayesian Network context, you might use KL divergence to compare two probability distributions. For example, you could compare the predicted distribution of a variable using your Bayesian Network with the actual observed distribution. A smaller KL divergence indicates a better match between the two distributions.
+    <br>So, KL divergence helps quantify the "distance" or difference between probability distributions, helping you understand how well one distribution approximates another.
 
-extra_description = All our targets have to learn the structure of the Bayesian network
-    alarm.bif from data. The learning process is done with the best algorithm for each target.
-    We then compare the performance of each algorithm by computing the Fscore of the learned
+extra_description = Imagine you have two different probability distributions, let's call them P and Q, and you want to know how much information you'd lose if you used Q to approximate P.
+    <br>Here's how it works:    
+    <br><b>1. Measuring Difference</b>: KL divergence calculates the difference between the two distributions for each possible event. It's like comparing how likely each puzzle piece is in one puzzle versus another.
+    <br><b>2. Information Loss</b>: For each event, you calculate the difference in the probabilities assigned by P and Q. If P and Q agree, the difference is small. If they differ a lot, the difference is large. This quantifies the amount of information lost when approximating P with Q.
+    <br><b>3. Summing Up</b>: You sum up these differences for all events, which gives you an overall measure of how much information you lose when using Q to represent P.
+    <br>KL divergence is not a symmetric measure. In other words, the KL divergence from P to Q might be different from the KL divergence from Q to P. This reflects the fact that changing the order of the distributions can give different results.
+    
 
 task_scale = auto
 post_task_scale = linear
