--- a/themes/Learning/theme.ini
+++ b/themes/Learning/theme.ini
@@ -1,3 +1,11 @@
 [Learning]
-description=Learning
+description= Learning a Bayesian Network is like reverse-engineering a puzzle. Instead of having all the pieces and trying to figure out the whole picture, 
+    you have the completed puzzle and you're trying to determine how the pieces fit together.
+    <br>Imagine you have a completed puzzle, and you're not given the picture on the box. Your job is to carefully study the connections between the pieces and the patterns they form. 
+    By analyzing how the pieces interlock and the colors and shapes align, you start to piece together the rules that governed the puzzle's creation. You might discover that certain pieces 
+    are more likely to be neighbors, and some patterns repeat in specific ways.
+    <br>In learning a Bayesian Network, you have data representing the relationships between variables and their probabilities. You're trying to deduce the underlying structure 
+    that generated this data. You observe how variables tend to co-occur, which ones influence others, and the patterns of dependencies. Through statistical methods and algorithms,
+    you build a Bayesian Network that best represents these relationships, just as you would gradually recreate the puzzle's image based on the patterns you observe.
+    <br>So, learning a Bayesian Network is about understanding the hidden rules that generated the observed data, much like figuring out a puzzle's image from the arrangement of its pieces.
 ; order = 
