--- a/themes/Input_Output/theme.ini
+++ b/themes/Input_Output/theme.ini
@@ -1,6 +1,6 @@
 [Input_Output]
 description= The Input/Output task involves reading and writing Bayesian Network files. 
-    <br>Bayesian Network files are used to store the structure and parameters of a Bayesian Network. 
-    <br>They can be used to save a Bayesian Network for later use, or to share a Bayesian Network with others. 
-    <br>They can also be used to import a Bayesian Network into another program, such as a Bayesian Network editor or a Bayesian Network inference engine.
+    <br><br>Bayesian Network files are used to store the structure and parameters of a Bayesian Network. 
+    <br><br>They can be used to save a Bayesian Network for later use, or to share a Bayesian Network with others. 
+    <br><br>They can also be used to import a Bayesian Network into another program, such as a Bayesian Network editor or a Bayesian Network inference engine.
 task_order= BIF, BIFXML, DSL, NET, O3PRM, UAI, XDSL
