--- a/themes/Learning/Learning_structure_large_sampling/config.ini
+++ b/themes/Learning/Learning_structure_large_sampling/config.ini
@@ -13,7 +13,7 @@ timeout = 180
 arguments_description = Number of samples
 
 extra_html_element = alarm.html
-description = Here the goal is to learn the structure of the Bayesian network alarm.bif from data. The learning process is done with a small sample size.
+description = Here the goal is to learn the structure of the Bayesian network alarm.bif from data. The learning process is done with a large sample size.
 
 extra_description = All our targets have to learn the structure of the Bayesian network
     alarm.bif from data. The learning process is done with the best algorithm for each target.
