--- a/themes/Learning/theme.ini
+++ b/themes/Learning/theme.ini
@@ -8,4 +8,4 @@ description= Learning a Bayesian Network is like reverse-engineering a puzzle. I
     that generated this data. You observe how variables tend to co-occur, which ones influence others, and the patterns of dependencies. Through statistical methods and algorithms,
     you build a Bayesian Network that best represents these relationships, just as you would gradually recreate the puzzle's image based on the patterns you observe.
     <br><br>So, learning a Bayesian Network is about understanding the hidden rules that generated the observed data, much like figuring out a puzzle's image from the arrangement of its pieces.
-; order = 
+; order = f
