benchmark can now be configure

--- a/themes/Inference/Best_Inference/config.ini
+++ b/themes/Inference/Best_Inference/config.ini
@@ -10,7 +10,7 @@ arguments_description = Files Infered On
 description = The Goal of the task is to compare, for each Targets the best inference algorithm. You can find the name of the function/algorithm used
     in the code used to generate the results.
 
-task_scale = auto
+task_scale = log
 post_task_scale = auto
 
 task_xlabel = Files Infered On
