--- a/themes/Input_Output/BIFXML/config.ini
+++ b/themes/Input_Output/BIFXML/config.ini
@@ -1,5 +1,5 @@
 [BIFXML]
-; nb_runs = 30
+nb_runs = 1
 arguments = cancer.bifxml,earthquake.bifxml,asia.bifxml,child.bifxml,insurance.bifxml,water.bifxml,mildew.bifxml,alarm.bifxml,barley.bifxml,hailfinder.bifxml,hepar2.bifxml,andes.bifxml,diabetes.bifxml,pigs.bifxml,link.bifxml,munin.bifxml
 keyword = bifxml,Bayesian network
 timeout = 180
