--- a/themes/Input_Output/DSL/config.ini
+++ b/themes/Input_Output/DSL/config.ini
@@ -1,5 +1,5 @@
 [DSL]
-; nb_runs = 30
+nb_runs = 1
 arguments = cancer.dsl,earthquake.dsl,asia.dsl,child.dsl,insurance.dsl,water.dsl,mildew.dsl,alarm.dsl,barley.dsl,hailfinder.dsl,hepar2.dsl,andes.dsl,diabetes.dsl,pigs.dsl,link.dsl,munin.dsl
 keyword = dsl,Bayesian network
 timeout = 180
