--- a/themes/Input_Output/XDSL/config.ini
+++ b/themes/Input_Output/XDSL/config.ini
@@ -1,5 +1,5 @@
 [XDSL]
-; nb_runs = 30
+nb_runs = 1
 arguments = cancer.xdsl,earthquake.xdsl,asia.xdsl,child.xdsl,insurance.xdsl,water.xdsl,mildew.xdsl,alarm.xdsl,barley.xdsl,hailfinder.xdsl,hepar2.xdsl,andes.xdsl,diabetes.xdsl,pigs.xdsl,link.xdsl,munin.xdsl
 keyword = xdsl,Bayesian network
 timeout = 180
