--- a/themes/Learning/Learning_micro_child_Kullback_Leibler/config.ini
+++ b/themes/Learning/Learning_micro_child_Kullback_Leibler/config.ini
@@ -9,6 +9,7 @@ file_used = micro_child.bif
 evaluation_language = python
 evaluation_script = evaluation
 evaluation_function = evaluateFscore evaluatePrecision evaluateRecall evaluateKullback_Leibler evaluatePQerror
+evaluation_sort_order = asc, asc, asc, asc, desc
 timeout = 180
 arguments_description = Number of samples
 
@@ -39,3 +40,5 @@ post_task_title = Fscore of the best algorithm for each target, Precision of the
 post_task_display = line
 
 active = True
+
+information_to_display = timeout, nb_runs
