--- a/themes/Input_Output/BIF/config.ini
+++ b/themes/Input_Output/BIF/config.ini
@@ -1,5 +1,5 @@
 [BIF]
-; nb_runs = 30
+nb_runs = 1
 arguments = cancer.bif,earthquake.bif,asia.bif,child.bif,insurance.bif,water.bif,mildew.bif,alarm.bif,barley.bif,hailfinder.bif,hepar2.bif,andes.bif,diabetes.bif,pigs.bif,link.bif,munin.bif
 keyword = bif,Bayesian network
 timeout = 180
