--- a/themes/Input_Output/NET/config.ini
+++ b/themes/Input_Output/NET/config.ini
@@ -1,5 +1,5 @@
 [NET]
-; nb_runs = 30
+nb_runs = 1
 arguments = cancer.net,earthquake.net,asia.net,child.net,insurance.net,water.net,mildew.net,alarm.net,barley.net,hailfinder.net,hepar2.net,andes.net,diabetes.net,pigs.net,link.net,munin.net
 keyword = net,Bayesian network
 timeout = 180
