--- a/themes/Input_Output/O3PRM/config.ini
+++ b/themes/Input_Output/O3PRM/config.ini
@@ -1,5 +1,5 @@
 [O3PRM]
-; nb_runs = 30
+nb_runs = 1
 arguments = cancer.o3prm,earthquake.o3prm,asia.o3prm,child.o3prm,insurance.o3prm,water.o3prm,mildew.o3prm,alarm.o3prm,barley.o3prm,hailfinder.o3prm,hepar2.o3prm,andes.o3prm,diabetes.o3prm,pigs.o3prm,link.o3prm,munin.o3prm
 keyword = o3prm,Bayesian network
 timeout = 180
