--- a/themes/Input_Output/UAI/config.ini
+++ b/themes/Input_Output/UAI/config.ini
@@ -1,5 +1,5 @@
 [UAI]
-; nb_runs = 30
+nb_runs = 1
 arguments = cancer.uai,earthquake.uai,asia.uai,child.uai,insurance.uai,water.uai,mildew.uai,alarm.uai,barley.uai,hailfinder.uai,hepar2.uai,andes.uai,diabetes.uai,pigs.uai,link.uai,munin.uai
 keyword = uai,Bayesian network
 timeout = 180
