changing how the eval function works

--- a/themes/Learning/Learning_micro_child_Kullback_Leibler/config.ini
+++ b/themes/Learning/Learning_micro_child_Kullback_Leibler/config.ini
@@ -10,6 +10,7 @@ evaluation_language = python
 evaluation_script = evaluation
 evaluation_function = evaluateFscore evaluatePrecision evaluateRecall evaluateKullback_Leibler evaluatePQerror
 evaluation_sort_order = asc, asc, asc, asc, desc
+evaluation_arguments = {'filenameBif' : 'micro_child.bif'}
 timeout = 180
 arguments_description = Number of samples
 
