--- a/themes/Learning/Learning_structure_large_sampling/config.ini
+++ b/themes/Learning/Learning_structure_large_sampling/config.ini
@@ -9,6 +9,7 @@ file_used = alarm.bif
 evaluation_language = python
 evaluation_script = evaluation
 evaluation_function = evaluateFscore evaluatePrecision evaluateRecall
+evaluation_arguments = {'filenameBif' : 'micro_child.bif'}
 timeout = 180
 arguments_description = Number of samples
 
