changing task to addapt to new template

--- a/themes/Inference/Approx_Inference/task.ini
+++ b/themes/Inference/Approx_Inference/task.ini
@@ -1,4 +1,7 @@
-[Approx_Inference]
+[task]
+; the title of the task
+title = Approximation Inference
+
 ; nb_runs = 30
 arguments = pigs.bif,water.bif,munin.bif,mildew.bif,link.bif,insurance.bif,hepar2.bif,hailfinder.bif,earthquake.bif,diabetes.bif,child.bif,cancer.bif,barley.bif,asia.bif,andes.bif,alarm.bif
 keyword = bif,Bayesian network, Learning structure, Learning parameters
