--- a/themes/Inference/Best_Inference/task.ini
+++ b/themes/Inference/Best_Inference/task.ini
@@ -1,4 +1,6 @@
-[Best_Inference]
+[task]
+; the title of the task
+title = Best Inference
 ; nb_runs = 30
 arguments = cancer.bif,earthquake.bif,asia.bif,child.bif,insurance.bif,water.bif,mildew.bif,alarm.bif,barley.bif,hailfinder.bif,hepar2.bif,andes.bif,diabetes.bif,pigs.bif,link.bif,munin.bif
 keyword = bif,Bayesian network, Learning structure, Learning parameters
