changing the path

--- a/themes/Input_Output/BIF/task.ini
+++ b/themes/Input_Output/BIF/task.ini
@@ -1,4 +1,5 @@
-[BIF]
+[task]
+title = Reading time of file in BIF format
 nb_runs = 1
 arguments = cancer.bif,earthquake.bif,asia.bif,child.bif,insurance.bif,water.bif,mildew.bif,alarm.bif,barley.bif,hailfinder.bif,hepar2.bif,andes.bif,diabetes.bif,pigs.bif,link.bif,munin.bif
 keyword = bif,Bayesian network
