--- a/themes/Input_Output/NET/task.ini
+++ b/themes/Input_Output/NET/task.ini
@@ -1,4 +1,5 @@
-[NET]
+[task]
+title = Reading time of file in NET format
 nb_runs = 1
 arguments = cancer.net,earthquake.net,asia.net,child.net,insurance.net,water.net,mildew.net,alarm.net,barley.net,hailfinder.net,hepar2.net,andes.net,diabetes.net,pigs.net,link.net,munin.net
 keyword = net,Bayesian network
