--- a/themes/Input_Output/UAI/task.ini
+++ b/themes/Input_Output/UAI/task.ini
@@ -1,4 +1,5 @@
-[UAI]
+[task]
+title = Reading time of file in UAI format
 nb_runs = 1
 arguments = cancer.uai,earthquake.uai,asia.uai,child.uai,insurance.uai,water.uai,mildew.uai,alarm.uai,barley.uai,hailfinder.uai,hepar2.uai,andes.uai,diabetes.uai,pigs.uai,link.uai,munin.uai
 keyword = uai,Bayesian network
