--- a/themes/Input_Output/BIFXML/task.ini
+++ b/themes/Input_Output/BIFXML/task.ini
@@ -1,11 +1,9 @@
-[BIFXML]
+[task]
+title = Reading time of file in BIFXML format
 nb_runs = 1
 arguments = cancer.bifxml,earthquake.bifxml,asia.bifxml,child.bifxml,insurance.bifxml,water.bifxml,mildew.bifxml,alarm.bifxml,barley.bifxml,hailfinder.bifxml,hepar2.bifxml,andes.bifxml,diabetes.bifxml,pigs.bifxml,link.bifxml,munin.bifxml
 keyword = bifxml,Bayesian network
 timeout = 180
-description =  
-    
-extra_description = 
 
 arguments_description = Bayesian network
 task_scale = auto
