--- a/themes/Input_Output/DSL/task.ini
+++ b/themes/Input_Output/DSL/task.ini
@@ -1,4 +1,5 @@
-[DSL]
+[task]
+title = Reading time of file in DSL format
 nb_runs = 1
 arguments = cancer.dsl,earthquake.dsl,asia.dsl,child.dsl,insurance.dsl,water.dsl,mildew.dsl,alarm.dsl,barley.dsl,hailfinder.dsl,hepar2.dsl,andes.dsl,diabetes.dsl,pigs.dsl,link.dsl,munin.dsl
 keyword = dsl,Bayesian network
